--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.18.54",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.7",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -21,9 +22,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron:tsc":"./electron-compile.sh",
-    "electron:clear":"make clear",
-    "electron:all-build":"make clear && make prepare &&./electron-compile.sh",
+    "electron:tsc": "./electron-compile.sh",
+    "electron:clear": "make clear",
+    "electron:all-build": "make clear && make prepare &&./electron-compile.sh",
     "electron": "electron ./dist/electron.js",
     "dev": "nf start"
   },
