--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/kill-port": "^2.0.1",
     "@types/node": "^16.18.54",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.7",
     "eslint-plugin-prettier": "^5.0.0",
+    "kill-port": "^2.0.1",
     "path-browserify": "^1.0.1",
     "prettier": "^3.0.3",
     "react": "^18.2.0",
